--- a/src/styles.css
+++ b/src/styles.css
@@ -12,7 +12,7 @@
 }
 
 body {
-    background-color: #F4F4F4;
+    background-color: #f7f7f7;
 }
 
 #page-content-wrapper {
@@ -48,7 +48,7 @@ body {
 
 /* Star Rating Color Customization */
 .star-icon {
-    font-size: 20px !important;
+    font-size: 15px !important;
 }
 .star-icon:before {
     color: #FEC42E !important;
