--- a/src/styles.css
+++ b/src/styles.css
@@ -18,7 +18,7 @@ body {
 #page-content-wrapper {
     width: 100%;
     position: absolute;
-    padding: 30px 30px 30px 50px;
+    padding: 30px 0px 0px 50px;
     margin-top: 36px;
     transition: padding 0.5s;
 }
@@ -54,6 +54,13 @@ body {
     color: #FEC42E !important;
     top: -3px !important;
 }
+
+/* Firefox hack */
+@-moz-document url-prefix() { 
+    .star-icon:before {
+        top: -9px !important;
+    }
+  }
 
 /* Review Tabs Size Customization */
 .mat-tab-label, .mat-tab-label-active{
