--- a/src/app/components/charts/charts.component.html
+++ b/src/app/components/charts/charts.component.html
@@ -34,7 +34,7 @@
     <div class="row">
         <div class="col-lg-6">
             <div class="card">
-                <p-chart type="line" [data]="recommend" (onDataSelect)="selectData($event)"></p-chart> 
+                <p-chart type="scatter" [data]="recommend" [options]="options" (onDataSelect)="selectData($event)"></p-chart> 
             </div><br>      
         </div>
         <div class="col-lg-6"> 
