--- a/src/app/components/charts/charts.component.html
+++ b/src/app/components/charts/charts.component.html
@@ -34,24 +34,24 @@
     <div class="row">
         <div class="col-lg-6">
             <div class="card">
-                <p-chart type="scatter" [data]="recommend" [options]="options" (onDataSelect)="selectData($event)"></p-chart> 
+                <p-chart type="bar" [data]="recommend" [options]="options" (onDataSelect)="selectData($event)"></p-chart> 
             </div><br>      
         </div>
         <div class="col-lg-6"> 
             <div class="card">
-                <p-chart type="line" [data]="politeness" (onDataSelect)="selectData($event)"></p-chart>        
+                <p-chart type="bar" [data]="politeness" [options]="options" (onDataSelect)="selectData($event)"></p-chart>        
             </div><br>
         </div>
     </div>
     <div class="row">
         <div class="col-lg-6"> 
             <div class="card">
-                <p-chart type="line" [data]="helpfulness" (onDataSelect)="selectData($event)"></p-chart>        
+                <p-chart type="bar" [data]="helpfulness" [options]="options" (onDataSelect)="selectData($event)"></p-chart>        
             </div><br>
         </div>
         <div class="col-lg-6"> 
             <div class="card">
-                <p-chart type="line" [data]="trustworthiness" (onDataSelect)="selectData($event)"></p-chart>        
+                <p-chart type="bar" [data]="trustworthiness" [options]="options" (onDataSelect)="selectData($event)"></p-chart>        
             </div><br>
         </div>
     </div>
