Add child routes for manage-users

--- a/src/app/components/manage-users/manage-users.component.html
+++ b/src/app/components/manage-users/manage-users.component.html
@@ -1,4 +1,2 @@
-<app-page-header [pageInfo]="pageInfo"></app-page-header>
-<app-tables [users]="users" [headerButtons]="headerButtons" [actionButtons]="actionButtons"></app-tables>
-  
+<router-outlet></router-outlet>  
   
