reconfigure routing in order for login page to become independent from rest of app

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,5 @@
+<app-header></app-header>
+<app-side-nav></app-side-nav>
 <div id="page-content-wrapper" [ngClass]="{'sideBar': openSideNav}">
     <div class="container-fluid">
         <div class="rows">
