--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div class="wrapper">
-    <app-header></app-header>
-    <app-side-nav></app-side-nav>
-    <app-home></app-home>
+    <!-- <app-header></app-header>
+    <app-side-nav></app-side-nav> -->
+    <!-- <app-home></app-home> -->
+    <router-outlet></router-outlet>    
 </div>
