--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -1,4 +1,4 @@
-.sign-in-wrapper {
+.login-wrapper {
     height: 100vh;
     width: 100%;
     display: flex;
@@ -23,7 +23,4 @@
 .card {
     width: 350px;
     min-height: 200px;
-}
-
-.card-body {
 }
