--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <div class="rows">
     <div class="col-lg-12">
-      <div class="sign-in-wrapper">
+      <div class="login-wrapper">
         <img class="companyLogo" src="../../assets/dog blue logo.png" alt="">
         <div class="card">
           <div class="card-body">
