--- a/src/app/components/review-card/review-card.component.html
+++ b/src/app/components/review-card/review-card.component.html
@@ -7,14 +7,6 @@
       </div>
       <div class="card-body">
         <mat-tab-group>
-          <mat-tab label="Rating">
-            <div class="ratingContent">
-              <span>Likely to Recommend:</span><rating [(ngModel)]="review.rating.recommendRating" [max]="5" [readonly]="true"></rating><br>
-              <span>Politeness: </span> <rating [(ngModel)]="review.rating.politenessRating" [max]="5" [readonly]="true"></rating><br>
-              <span>Helpfulness: </span> <rating [(ngModel)]="review.rating.helpfulnessRating" [max]="5" [readonly]="true"></rating><br>
-              <span>Trustworthiness: </span> <rating [(ngModel)]="review.rating.trustworthyRating" [max]="5" [readonly]="true"></rating><br>
-            </div>
-          </mat-tab>
           <mat-tab label="Liked">
             <p></p>
             <p>{{review.liked}}</p>
@@ -23,7 +15,7 @@
             <p></p>
             <p>{{review.disliked}}</p>
           </mat-tab>
-          <mat-tab label="Product Desc.">
+          <mat-tab label="Product">
             <p></p>
             <p>{{review.productDesc}}</p>
           </mat-tab>
