--- a/src/app/components/page-header/page-header.component.css
+++ b/src/app/components/page-header/page-header.component.css
@@ -9,7 +9,7 @@
     flex-direction: row;
     align-items: center;
     padding-bottom: 20px;
-    border-bottom: 1px solid #E9E9E9;    
+    border-bottom: 1px solid #DDDDDD;    
     user-select: none;    
     margin-bottom: 20px;    
 }
