--- a/src/app/components/review-card/review-card.component.css
+++ b/src/app/components/review-card/review-card.component.css
@@ -34,3 +34,13 @@ a {
     text-align: right;
     padding-right: 130px;
 }
+
+.row {
+    display: flex;
+    justify-content: flex-start;
+}
+
+.card {
+    width: 450px; 
+    margin: 10px 10px 0px 0px;
+}
