Modify page header

--- a/src/app/components/page-header/page-header.component.html
+++ b/src/app/components/page-header/page-header.component.html
@@ -1,4 +1,4 @@
 <div class="page-header">
-    <i id="icon" class="material-icons md-light">{{pageInfo.icon}}</i>
+    <!-- <i id="icon" class="material-icons md-light">{{pageInfo.icon}}</i> -->
     <h4>{{pageInfo.title}}</h4>
 </div>
