--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,7 @@
 <app-header></app-header>
 <app-side-nav></app-side-nav>
 <div id="page-content-wrapper" [ngClass]="{'sideBar': openSideNav}">
+    <app-page-header></app-page-header>
     <div class="container-fluid">
         <div class="rows">
             <div class="col-lg-12">
