--- a/src/app/components/page-header/page-header.component.css
+++ b/src/app/components/page-header/page-header.component.css
@@ -1,15 +1,19 @@
 .page-header h4 {
     font-weight: lighter;
     margin-bottom: 0;
-    padding-left: 10px;
+    padding-left: 20px;
+    color: #FFFFFF;
 }
 
 .page-header {
+    height: 70px; 
+    background-color: #6B7179;
+    margin-top: 10px;
+
     display: flex;
     flex-direction: row;
     align-items: center;
-    padding-bottom: 20px;
-    border-bottom: 1px solid #DDDDDD;    
+    /* padding-bottom: 20px; */
     user-select: none;    
-    margin-bottom: 20px;    
+    margin-bottom: 20px;
 }
