Add breadcrumb component

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,6 +2,7 @@
 <app-side-nav></app-side-nav>
 <div id="page-content-wrapper" [ngClass]="{'sideBar': openSideNav}">
     <app-page-header></app-page-header>
+    <app-breadcrumbs></app-breadcrumbs>    
     <div class="container-fluid">
         <div class="rows">
             <div class="col-lg-12">
