--- a/src/app/components/page-header/page-header.component.css
+++ b/src/app/components/page-header/page-header.component.css
@@ -15,5 +15,5 @@
     align-items: center;
     /* padding-bottom: 20px; */
     user-select: none;    
-    margin-bottom: 20px;
+    /* margin-bottom: 20px; */
 }
