--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,11 @@
 <div id="header-wrapper">
   <div (click)="toggleSideNav()" id="hamburger-menu"><i class="material-icons">menu</i></div>
-  <a href="" id="company-logo" [ngClass]="{'company-logo-resize': sideNavOpen}"><img src="../../assets/First_Impression_302.png" alt=""></a>
-  <a routerLink="/messages" placement="bottom" ngbTooltip="Messages" class="messages"><i class="material-icons">email</i></a>  
-  <a routerLink="/myprofile" placement="bottom" ngbTooltip="Profile" class="profile"><i class="material-icons">perm_identity</i></a>
-  <a href="" placement="bottom" ngbTooltip="Logout"class="logout"><i class="material-icons">power_settings_new</i></a>
+  <a href="" class="company-logo"><img src="../../assets/First_Impression_302.png" alt=""></a>
+  <mat-icon routerLink="/messages" matTooltip="Notifications" class="messages">notifications</mat-icon> 
+
+  <button mat-button [matMenuTriggerFor]="menu">Max Jacobson</button>
+  <mat-menu #menu="matMenu">
+    <button routerLink="/myprofile" mat-menu-item>Profile</button>
+    <button mat-menu-item>Logout</button>
+  </mat-menu>
 </div>
