--- a/src/app/components/charts/charts.component.html
+++ b/src/app/components/charts/charts.component.html
@@ -1,42 +1,9 @@
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-lg-6">
-            <div class="card">
-                <p-chart type="bar" [data]="recommend" [options]="options" (onDataSelect)="selectData($event)"></p-chart> 
-            </div><br>      
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-lg-4">
-            <div class="card">
-                <div class="card-body">
-                    <h4 class="card-title">Liked</h4>
-                    <h6 class="card-subtitle mb-2 text-muted">What the customer liked</h6>
-                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi libero sapien, volutpat eu augue ultrices.</p>
-                    <a href="#" class="card-link">More</a>
-                </div>
-            </div><br>
-        </div>
-        <div class="col-lg-4">
-            <div class="card">
-                <div class="card-body">
-                    <h4 class="card-title">Disliked</h4>
-                    <h6 class="card-subtitle mb-2 text-muted">What the customer disliked</h6>
-                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce interdum purus vitae odio mattis, et iaculis nisi.</p>
-                    <a href="#" class="card-link">More</a>
-                </div>
-            </div><br>       
-        </div>
-        <div class="col-lg-4">
-            <div class="card">
-                <div class="card-body">
-                    <h4 class="card-title">Product</h4>
-                    <h6 class="card-subtitle mb-2 text-muted">Understanding of the product</h6>
-                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ac suscipit dui. Praesent eu maximus eros, eu bibendum.</p>
-                    <a href="#" class="card-link">More</a>
-                </div>
-            </div><br>
-        </div>     
-    </div>
-</div>
-
+<mat-card>
+    <mat-card-content>
+        <p-chart type="bar" [data]="recommend" [options]="options" (onDataSelect)="selectData($event)"></p-chart> 
+    </mat-card-content>
+    <mat-card-actions>
+        <button mat-button>Button1</button>
+        <button mat-button>Button2</button>
+    </mat-card-actions>
+</mat-card>
