--- a/src/app/components/leaderboard/leaderboard.component.html
+++ b/src/app/components/leaderboard/leaderboard.component.html
@@ -1,4 +1,6 @@
-<div class="example-container mat-elevation-z8">
+<mat-card class="leaderboardWrapper">
+
+<div class="example-container">
     <mat-table #table [dataSource]="dataSource">
   
       <!-- Position Column -->
@@ -22,9 +24,7 @@
       <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
       <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
     </mat-table>
-  
-    <mat-paginator #paginator
-                   [pageSize]="5"
-                   [pageSizeOptions]="[5, 10, 20]">
-    </mat-paginator>
+
   </div>
+
+</mat-card>
