--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -6,6 +6,7 @@
     position: fixed;
     width: 100%;
     z-index: 1;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 #hamburger-menu {
