Make additional css adjustments for dashboard

--- a/src/app/components/leaderboard/leaderboard.component.css
+++ b/src/app/components/leaderboard/leaderboard.component.css
@@ -4,8 +4,11 @@
 }
 
 .mat-table {
-  overflow: auto;
-  max-height: 350px;
+  overflow: scroll;
+}
+
+.mat-card {
+  max-height: 400px;
 }
 
 .mat-header-cell.mat-sort-header-sorted {
@@ -15,6 +18,7 @@
 .leaderboardWrapper {
   margin-bottom: 20px;
   padding: 0;
+  overflow: scroll;
 }
 
 .example-header {
