--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -4,7 +4,7 @@
     <app-page-header></app-page-header>
     <app-breadcrumbs></app-breadcrumbs>    
     <div class="container-fluid">
-        <div class="rows">
+        <div class="row">
             <div class="col-lg-12">
                 <router-outlet></router-outlet>
             </div>
