Auto-close and open side nav depending on window size and remove hamburger menu; Add tooltips for sidenav when closed

--- a/src/app/components/feedback-filters/feedback-filters.component.html
+++ b/src/app/components/feedback-filters/feedback-filters.component.html
@@ -47,6 +47,6 @@
     </form>
 
     <button mat-raised-button color="primary">Apply</button>
-    <button mat-raised-button>Cancel</button>
+    <button mat-raised-button>Reset</button>
   </mat-expansion-panel>
 </mat-accordion>
