--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,4 @@
-<div id="header-wrapper">
-  <div (click)="toggleSideNav()" id="hamburger-menu"><i class="material-icons">menu</i></div>
+<div class="header-wrapper">
   <a href="" class="company-logo"><img src="../../assets/First_Impression_302.png" alt=""></a>
   <mat-icon routerLink="/messages" matTooltip="Notifications" class="messages">notifications</mat-icon> 
 
