--- a/src/app/components/leaderboard/leaderboard.component.css
+++ b/src/app/components/leaderboard/leaderboard.component.css
@@ -8,7 +8,7 @@
 }
 
 .mat-card {
-  max-height: 400px;
+  height: 436px;
 }
 
 .mat-header-cell.mat-sort-header-sorted {
@@ -29,4 +29,14 @@
 .mat-form-field {
   font-size: 14px;
   width: 100%;
+}
+
+.mat-card-title {
+  margin: 0;
+  font-size: 18px;
+  text-align: center;
+}
+
+.mat-form-field input {
+  margin: 0;
 }
