reconfigure review cards to be more mobile responsive and put 3 cards on a row instead of two.

--- a/src/app/components/customer-satisfaction/customer-satisfaction.component.html
+++ b/src/app/components/customer-satisfaction/customer-satisfaction.component.html
@@ -6,11 +6,11 @@
     <div class="col-lg-12 overall-rating">
       <h1>{{reviewTotals.overallRating}}</h1>
       <rating [(ngModel)]="reviewTotals.overallRating" [max]="5" [readonly]="true"></rating>
-      <!-- <span>({{reviewTotals.reviewsCount}} Reviews)</span>      -->
+      <button mat-raised-button color="primary">Filters</button>      
     </div>      
   </div>
   <div class="row">
-    <div class="col-lg-12">
+    <div class="col-lg-11">
       <app-feedback-filters></app-feedback-filters>
     </div>
   </div>
