--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -1,3 +1,7 @@
+.login-body {
+    background-color: #FFFFFF;
+}
+
 .login-wrapper {
     height: 100vh;
     width: 100%;
@@ -18,9 +22,4 @@
     color: #FFFFFF;
     cursor: pointer;
     width: 308px;
-}
-
-.card {
-    width: 350px;
-    min-height: 200px;
 }
