--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,16 +1,14 @@
-<div class="container-fluid">
-  <div class="rows">
+<div class="container-fluid login-body">
+  <div class="row">
     <div class="col-lg-12">
       <div class="login-wrapper">
         <img class="companyLogo" src="../../assets/dog blue logo.png" alt="">
-        <div class="card">
-          <div class="card-body">
-            <div class="alert alert-danger" role="alert" *ngIf="invalidLogin">
-              Invalid username and/or password.
-            </div>
-            <form (ngSubmit)="login(f.value)" #f="ngForm">
-              <div class="form-group">
-                <input 
+          <div class="alert alert-danger" role="alert" *ngIf="invalidLogin">
+            Invalid username and/or password.
+          </div>
+          <form (ngSubmit)="login(f.value)" #f="ngForm">
+            <div class="form-group">
+              <input 
                 type="email" 
                 class="form-control" 
                 id="username" 
@@ -18,12 +16,11 @@
                 ngModel
                 name="username"
                 #username="ngModel"
-                required
-                >
-              </div>
+                required>
+            </div>
                         
-              <div class="form-group">
-                <input 
+            <div class="form-group">
+              <input 
                 type="password" 
                 class="form-control" 
                 id="password" 
@@ -31,13 +28,11 @@
                 ngModel 
                 name="password" 
                 #password="ngModel">
-              </div>
+            </div><hr>
           
-              <button type="submit" class="btn" >Login</button>
-              </form>  
-            </div>
-          </div>
-      </div>  
+            <button type="submit" class="btn" >Login</button>
+          </form>  
+        </div>  
+      </div>
     </div>
   </div>
-</div>
