persist user object in browser

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,11 +2,11 @@
   <a href="" class="company-logo"><img src="../../assets/First_Impression_302.png" alt=""></a>
   <mat-icon routerLink="/messages" matTooltip="Notifications" class="messages">notifications</mat-icon> 
 
-  <button mat-button [matMenuTriggerFor]="menu" *ngIf="authService.user">
-    {{authService.user.username}}
+  <button mat-button [matMenuTriggerFor]="menu">
+    {{user.username}}
   </button>
   <mat-menu #menu="matMenu">
-    <button routerLink="/myprofile" mat-menu-item>Profile</button>
+    <button routerLink="/profile" mat-menu-item>Profile</button>
     <button mat-menu-item (click)="authService.logout()">Logout</button>
   </mat-menu>
 </div>
