--- a/src/app/components/user-profile/user-profile.component.html
+++ b/src/app/components/user-profile/user-profile.component.html
@@ -1,10 +1,4 @@
-<form [formGroup]="form">
-  
-  <div class="form-group">
-    <label for="username">Username</label>
-      <input type="text" class="form-control form-control-sm" id="username" >
-  </div>
-
+<!-- 
   <div class="form-check">
     <label class="form-check-label">
       <input class="form-check-input" type="checkbox" value="" name="passwordChange">
@@ -22,32 +16,44 @@
     <label for="confirmPassword">Confirm Password</label>
       <input type="password" class="form-control form-control-sm" id="confirmPassword">
       <small id="emailHelp" class="form-text text-muted">New password must be at least 8 characters</small>            
-  </div>
+  </div>   -->
 
-  <div class="form-group">
-    <label for="firstName">First Name</label>
-      <input type="text" class="form-control form-control-sm" id="firstName" >
-  </div>
+  <form [formGroup]="userForm" (ngSubmit)="onSubmit()">
+      <div class="form-group">
+        <label for="username">Username</label>
+        <input formControlName="username" type="text" class="form-control form-control-sm" id="username" >
+      </div>
 
-  <div class="form-group">
-    <label for="lastName">Last Name</label>
-      <input type="text" class="form-control form-control-sm" id="lastName" >
-  </div>
+      <!-- password stuff here -->
 
-  <div class="form-group">
-    <label for="emailAddress">Email Address</label>
-      <input type="email" class="form-control form-control-sm" id="emailAddress" >
-  </div>
+      <div class="form-group">
+        <label for="firstName">First Name</label>
+        <input formControlName="firstName" type="text" class="form-control form-control-sm" id="firstName" >
+      </div>
 
-  <div class="form-group">
-    <label for="supervisor">Supervisor</label>
-      <input type="supervisor" class="form-control form-control-sm" id="supervisor" >
-  </div>
+      <div class="form-group">
+        <label for="lastName">Last Name</label>
+        <input formControlName="lastName" type="text" class="form-control form-control-sm" id="lastName" >
+      </div>
 
-  <div class="form-group">
-      <label for="role">Role</label>
-          <p-chips name="role"  ></p-chips>          
-    </div><br>
+      <div class="form-group">
+        <label for="emailAddress">Email Address</label>
+        <input formControlName="email" type="email" class="form-control form-control-sm" id="email" >
+      </div>
 
-    <button type="submit" class="btn btn-primary">Save Changes</button>
+      <div class="form-group">
+        <label for="supervisor">Supervisor</label>
+        <input formControlName="supervisor" type="supervisor" class="form-control form-control-sm" id="supervisor" >
+      </div>
+      
+      <div class="form-group">
+        <label for="role">Role</label>
+        <p-chips formControlName="role" name="role"></p-chips>          
+      </div>
+
+
+
+
+    <button type="submit" class="btn btn-success">Save</button>
+    <button type="button" class="btn btn-danger">Cancel</button>
   </form>
