--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,7 +3,7 @@
   <mat-icon routerLink="/messages" matTooltip="Notifications" class="messages">notifications</mat-icon> 
 
   <button mat-button [matMenuTriggerFor]="menu">
-    {{user.firstName}}
+    {{user.firstName}} {{user.lastName}}
   </button>
   <mat-menu #menu="matMenu">
     <button routerLink="/profile" mat-menu-item>Profile</button>
