--- a/src/app/components/user-profile/user-profile.component.html
+++ b/src/app/components/user-profile/user-profile.component.html
@@ -1,59 +1,36 @@
-<!-- 
-  <div class="form-check">
-    <label class="form-check-label">
-      <input class="form-check-input" type="checkbox" value="" name="passwordChange">
-      Change Password
-    </label>
-  </div><br>
-
-  <div class="form-group" >
-    <label for="newPassword">New Password</label>
-      <input type="password" class="form-control form-control-sm" id="newPassword">
-      <small id="emailHelp" class="form-text text-muted">New password must be at least 8 characters</small>            
+<form [formGroup]="userForm" (ngSubmit)="onSubmit()">
+  <div class="form-group">
+    <label for="username">Username</label>
+    <input formControlName="username" type="text" class="form-control form-control-sm" id="username" >
   </div>
 
-  <div class="form-group" >
-    <label for="confirmPassword">Confirm Password</label>
-      <input type="password" class="form-control form-control-sm" id="confirmPassword">
-      <small id="emailHelp" class="form-text text-muted">New password must be at least 8 characters</small>            
-  </div>   -->
+  <!-- password stuff here -->
 
-  <form [formGroup]="userForm" (ngSubmit)="onSubmit()">
-      <div class="form-group">
-        <label for="username">Username</label>
-        <input formControlName="username" type="text" class="form-control form-control-sm" id="username" >
-      </div>
+  <div class="form-group">
+    <label for="firstName">First Name</label>
+    <input formControlName="firstName" type="text" class="form-control form-control-sm" id="firstName" >
+  </div>
 
-      <!-- password stuff here -->
+  <div class="form-group">
+    <label for="lastName">Last Name</label>
+    <input formControlName="lastName" type="text" class="form-control form-control-sm" id="lastName" >
+  </div>
 
-      <div class="form-group">
-        <label for="firstName">First Name</label>
-        <input formControlName="firstName" type="text" class="form-control form-control-sm" id="firstName" >
-      </div>
+  <div class="form-group">
+    <label for="email">Email Address</label>
+    <input formControlName="email" type="email" class="form-control form-control-sm" id="email" >
+  </div>
 
-      <div class="form-group">
-        <label for="lastName">Last Name</label>
-        <input formControlName="lastName" type="text" class="form-control form-control-sm" id="lastName" >
-      </div>
+  <div class="form-group">
+    <label for="supervisor">Supervisor</label>
+    <input formControlName="supervisor" type="text" class="form-control form-control-sm" id="supervisor" >
+  </div>
 
-      <div class="form-group">
-        <label for="emailAddress">Email Address</label>
-        <input formControlName="email" type="email" class="form-control form-control-sm" id="email" >
-      </div>
+  <div class="form-group">
+    <label for="role">Role</label>
+    <p-chips formControlName="role" id="role"></p-chips>
+  </div>
 
-      <div class="form-group">
-        <label for="supervisor">Supervisor</label>
-        <input formControlName="supervisor" type="supervisor" class="form-control form-control-sm" id="supervisor" >
-      </div>
-      
-      <div class="form-group">
-        <label for="role">Role</label>
-        <p-chips formControlName="role" name="role"></p-chips>          
-      </div>
-
-
-
-
-    <button type="submit" class="btn btn-success">Save</button>
-    <button type="button" class="btn btn-danger">Cancel</button>
-  </form>
+  <button type="submit" class="btn btn-success">Save</button>
+  <button type="button" class="btn btn-danger">Cancel</button>
+</form>
