--- a/src/app/components/user-profile/user-profile.component.html
+++ b/src/app/components/user-profile/user-profile.component.html
@@ -1,36 +1,96 @@
 <form [formGroup]="userForm" (ngSubmit)="onSubmit()">
+
   <div class="form-group">
     <label for="username">Username</label>
     <input formControlName="username" type="text" class="form-control form-control-sm" id="username" >
+    <small
+      *ngIf="userForm.get('username').hasError('required')"
+      class="form-text text-muted">Username is required
+    </small>
+    <small
+      *ngIf="userForm.get('username').hasError('minlength')"
+      class="form-text text-muted">Username must be at least 8 characters
+    </small>
+  </div><hr>
+
+  <div class="form-group">
+    <label class="form-check-label" for="changePassword">
+      <input type="checkbox" class="form-check-input" id="changePassword" (change)="changePasswordChecked($event)">
+      Change Password
+    </label>
   </div>
 
-  <!-- password stuff here -->
+  <div *ngIf="changePassword">
+    <div formArrayName="passwords">
+      <div class="form-group" *ngFor="let control of getControls(); let i = index">
+        <label for="password_{{i}}">{{passwordLabel[i]}}</label>
+        <input
+          type="password"
+          autocomplete="off"
+          id="password_{{i}}"
+          class="form-control form-control-sm"
+          formControlName="{{i}}">
+      </div>
+      <small
+        *ngIf="userForm.get('passwords.0').hasError('required') && userForm.get('passwords.0').touched"
+        class="form-text text-muted">Password is required
+      </small>
+      <small
+        *ngIf="!userForm.get('passwords').valid && userForm.get('passwords.0').touched"
+        class="form-text text-muted">Passwords do not match
+      </small>
+      <small
+        *ngIf="userForm.get('passwords.0').hasError('minlength')"
+        class="form-text text-muted">Password must be at least 8 characters
+      </small>
+    </div>
+  </div><hr>
 
   <div class="form-group">
     <label for="firstName">First Name</label>
     <input formControlName="firstName" type="text" class="form-control form-control-sm" id="firstName" >
-  </div>
+    <small
+      *ngIf="userForm.get('firstName').hasError('required')"
+      class="form-text text-muted">First name is required
+    </small>
+  </div><hr>
 
   <div class="form-group">
     <label for="lastName">Last Name</label>
     <input formControlName="lastName" type="text" class="form-control form-control-sm" id="lastName" >
-  </div>
+    <small
+      *ngIf="userForm.get('lastName').hasError('required')"
+      class="form-text text-muted">Last name is required
+    </small>
+  </div><hr>
 
   <div class="form-group">
     <label for="email">Email Address</label>
     <input formControlName="email" type="email" class="form-control form-control-sm" id="email" >
-  </div>
+    <small
+      *ngIf="userForm.get('email').hasError('required')"
+      class="form-text text-muted">Email is required
+    </small>
+    <small
+      *ngIf="userForm.get('email').hasError('email') && userForm.get('email').touched"
+      class="form-text text-muted">Email is invalid
+    </small>
+  </div><hr>
 
   <div class="form-group">
     <label for="supervisor">Supervisor</label>
     <input formControlName="supervisor" type="text" class="form-control form-control-sm" id="supervisor" >
-  </div>
+    <small
+      *ngIf="userForm.get('supervisor').hasError('required') && userForm.get('supervisor').touched"
+      class="form-text text-muted">Supervisor is required
+    </small>
+  </div><hr>
 
   <div class="form-group">
     <label for="role">Role</label>
     <p-chips formControlName="role" id="role"></p-chips>
-  </div>
+  </div><hr>
 
-  <button type="submit" class="btn btn-success">Save</button>
-  <button type="button" class="btn btn-danger">Cancel</button>
+  <button type="submit" class="btn btn-primary">Save</button>
+  <button [disabled]="!userForm.valid" type="button" class="btn btn-danger">Cancel</button>
 </form>
