--- a/src/app/components/feedback/feedback.component.html
+++ b/src/app/components/feedback/feedback.component.html
@@ -7,7 +7,7 @@
       <h1>{{reviewTotals.overallRating}}</h1>
       <rating [(ngModel)]="reviewTotals.overallRating" [max]="5" [readonly]="true"></rating>
       <!-- <button mat-raised-button (click)="openDialog()" color="primary">Filters</button> -->
-    </div>      
+    </div>
   </div>
   <div class="row">
     <div class="col-lg-12">
@@ -16,7 +16,7 @@
   </div>
   <div class="row">
     <div class="col-lg-12">
-      <app-review-card [reviews]="reviews"></app-review-card>            
-    </div>            
+      <app-review-card [feedback]="feedback"></app-review-card>
+    </div>
   </div>
 </div>
